update markdown guide

--- a/content/posts/2024-03-21_markdown.md
+++ b/content/posts/2024-03-21_markdown.md
@@ -31,7 +31,12 @@ ___
 | col 2 is      | centered      |   $12 |
 | zebra stripes | are neat      |    $1 |
 ---
+### Task List
+- [x] Write the press release
+- [ ] Update the website
+- [ ] Contact the media
 
+###
 ### Link to External URL's
 
 [PaperMod Theme Github page](https://github.com/adityatelange/hugo-PaperMod)
@@ -42,3 +47,12 @@ ___
 ### Link to YouTube Video
 Video below is: Getting Started With Hugo by Envato Tuts+. The tutorial demonstrates the Papermod Theme. It also shows how to host the website Netlify.
 {{< youtube id="hjD9jTi_DQ4" title="Getting Started With Hugo">}}
+
+### Python code snippet
+```python
+i = 0
+while i<10:
+    print("Hello World!")
+    i ++
+print("Goodbye!")
+```
