add code to retrieve investment names from yfinance

--- a/content/posts/2024-05-11_00.md
+++ b/content/posts/2024-05-11_00.md
@@ -5,15 +5,15 @@ draft: false
 author: Evan
 categories: ["Investing"]
 tags: ["yfinance", "python"]
-showtoc: false
+showtoc: True
 tocopen: false
 ---
 
-## yfinance
+# yfinance
 
 Python Library to retrieve investment data from the yfinance website
 
-### Python Code to Download Daily Adjusted Closing Prices fo for Multiple Tickers
+## Python Code to Download Daily Adjusted Closing Prices fo for Multiple Tickers
 
 ```python
 import yfiance as yf
@@ -28,7 +28,7 @@ adj_close_df=df["Adj Close"]
 
 Unfortunately, the Tickers are placed into the df alphabetically, rather than in the order in the list. So, to correct, the following codde needfs to be used. To get columns in specified order, use technique below.
 
-### Python Code to Download Daily Adjusted Closing Prices fo for Multiple Tickers in list order
+## Python Code to Download Daily Adjusted Closing Prices for for Multiple Tickers in list order
 
 ```python
 import yfiance as yf
@@ -40,4 +40,13 @@ endDate="2023-12-31"
 adj_close_df=pd.DataFrame()
 for ticker in tickers:
     adj_close_df[ticker] = yf.download(ticker, start=startDate, end=endDate, interval="1d")["Adj Close"]
+```
+## Python Code to Download Investment Names for for Multiple Tickers in list order
+```python
+import yfiance as yf
+import pandas as pd
+
+tickers= ["AGG", "TIP", "MUB", "PFF", "IVV", "IWN", "EFA", "EEM", "IYR"]
+for t in tickers:
+    investment_names.loc[t,"investment_name"]=yf.Ticker(t).info["shortName"]
 ```
