format yfinance post

--- a/content/posts/2024-05-11_00.md
+++ b/content/posts/2024-05-11_00.md
@@ -9,9 +9,9 @@ showtoc: True
 tocopen: false
 ---
 
-# yfinance
+<!-- # yfinance -->
 
-Python Library to retrieve investment data from the yfinance website
+yfinance is a Python Library to retrieve investment data from the yfinance website
 
 ## Python Code to Download Daily Adjusted Closing Prices fo for Multiple Tickers
 
