correct yfinance multiple ticker code

--- a/content/posts/2024-05-11_00.md
+++ b/content/posts/2024-05-11_00.md
@@ -47,6 +47,7 @@ import yfiance as yf
 import pandas as pd
 
 tickers= ["AGG", "TIP", "MUB", "PFF", "IVV", "IWN", "EFA", "EEM", "IYR"]
+investment_names=pd.DataFrame()
 for t in tickers:
     investment_names.loc[t,"investment_name"]=yf.Ticker(t).info["shortName"]
 ```
