--- a/content/posts/2024-12-09_00.md
+++ b/content/posts/2024-12-09_00.md
@@ -8,8 +8,8 @@ tags: ["Hugo","Papermod"]
 showtoc: false
 tocopen: false
 ---
-### Add content to blog
-#### At command prompt, type:
+### 1. Add content to blog
+### 2. At command prompt, type:
 ```
 hugo new content content/posts/YYYY-MM-DD_nn.md
 ```
@@ -17,11 +17,25 @@ Notes:
 - YYYY-MM-DD is today's date
 - _nn is a number of the post for today
 
-#### Edit the Front Matter
+### 3. Edit the Front Matter
 - title: in quotes
 - categories: list in brackets, categories in quotes seperated by commas
 - tags: list in brackets, categories in quotes seperated by commas
 - showtoc: true or false (To show/hide Table of Contents)
 - tocopen: true or false (To keep open ToC by default on page load)
 
-#### Commit to github to Update Website
+### 4. Preview the site locally on web browser
+At the command prompt, type:
+```
+hugo serve
+```
+
+### 5. Commit to github
+
+### 6. View on github pages
+(github automatically updates website)
+
+url:
+```
+https://epageler.github.io/tech-blog/
+```
