add filename of post to title

--- a/content/posts/2024-03-19_00.md
+++ b/content/posts/2024-03-19_00.md
@@ -1,5 +1,5 @@
 ---
-title: "First Post on Hugo Website!"
+title: "First Post on Hugo Website! (Post 2024-03-19_00)"
 date: 2024-03-18T16:39:15-05:00
 draft: false
 categories: ["Web Development"]
