--- a/content/posts/2024-12-09_00.md
+++ b/content/posts/2024-12-09_00.md
@@ -1,5 +1,5 @@
 ---
-title: "Add Post to Hugo Blog"
+title: "Add Post to Hugo Blog (Post 2024-12-09_00"
 date: 2024-12-09T10:36:58-06:00
 draft: false
 author: Evan
