--- a/content/posts/2024-03-20_00.md
+++ b/content/posts/2024-03-20_00.md
@@ -1,5 +1,5 @@
 ---
-title: "Customize Site with Papermod Theme"
+title: "Customize Site with Papermod Theme (Post 2024-03-20_00)"
 date: 2024-03-20T11:17:41-05:00
 draft: false
 author: Evan
