--- a/content/posts/2024-03-21_00.md
+++ b/content/posts/2024-03-21_00.md
@@ -1,5 +1,5 @@
 ---
-title: "Deploying a Hugo Site to GitHub Pages"
+title: "Deploying a Hugo Site to GitHub Pages (Post 2024-03-21_00)"
 date: 2024-03-21T16:44:04-05:00
 draft: false
 author: Evan
