--- a/content/posts/2024-12-09_01.md
+++ b/content/posts/2024-12-09_01.md
@@ -1,10 +1,10 @@
 ---
-title: "Create Python Python Project with Poetry"
+title: "Create Python Python Project with Poetry (Post 2024-12-09-01_01)"
 date: 2024-12-09T12:13:58-06:00
 draft: false
 author: Evan
 categories: ["python"]
-tags: ["venv","poetry"]
+tags: ["python","venv","poetry"]
 showtoc: false
 tocopen: false
 ---
