--- a/content/posts/2024-03-21_01.md
+++ b/content/posts/2024-03-21_01.md
@@ -1,5 +1,5 @@
 ---
-title: "Markdown (Post 2024-03-21_01"
+title: "Markdown (Post 2024-03-21_01)"
 date: 2024-03-21T12:36:53-05:00
 draft: false
 author: Evan
