--- a/content/posts/2024-05-11_00.md
+++ b/content/posts/2024-05-11_00.md
@@ -1,5 +1,5 @@
 ---
-title: "yfinance (Post 2024-05-11_00"
+title: "yfinance (Post 2024-05-11_00)"
 date: 2024-05-11T12:28:24-05:00
 draft: false
 author: Evan
