minor punctuation change

--- a/content/posts/2025-04-28_00.md
+++ b/content/posts/2025-04-28_00.md
@@ -8,7 +8,7 @@ tags: ["Sytles"]
 showtoc: false
 tocopen: false
 ---
-### Set Style for Envelope Address.
+### Set Style for Envelope Address:
 (In Select Styles to Show Drop Down, select All Styles.)
 
 See Following Link:
