updated MS-Word Styles article

--- a/content/posts/2025-04-28_00.md
+++ b/content/posts/2025-04-28_00.md
@@ -4,13 +4,15 @@ date: 2025-04-28T12:44:47-05:00
 draft: false
 author: Evan
 categories: ["MS Word"]
-tags: ["Sytles"]
+tags: ["MS-Word Sytles"]
 showtoc: false
 tocopen: false
 ---
 ### Set Style for Envelope Address:
-(In Select Styles to Show Drop Down, select All Styles.)
+1. Show Styles as sidebar by clicking arrow at lower right of Styles on Home screen.
+2. Select Options button.
+3. In Select Styles to Show Drop Down, select All Styles.
+5. Select Envelope Address.
+6. Change Font, Size, etc.
 
-See Following Link:
-
-[Changing the Default Font for Envelopes](https://wordribbon.tips.net/T006111_Changing_the_Default_Font_for_Envelopes.html)
+See Following Link for More Details: [Changing the Default Font for Envelopes](https://wordribbon.tips.net/T006111_Changing_the_Default_Font_for_Envelopes.html)
